...
          Column(
              modifier = Modifier.fillMaxWidth().testTag("addEventDialog"),
              verticalArrangement = Arrangement.spacedBy(8.dp)) {
                Title("Name")
                OutlinedTextField(
                    value = name,
                    modifier = Modifier.fillMaxWidth(0.9f).testTag("nameTextField"),
                    onValueChange = { name = it },
                    placeholder = { Text("Name the event") })
                DateAndTimePickers(
                    context,
                    selectedDate,
                    lengthHour,
...
                },
                year,
                month,
                day)
            .show()
      },
      modifier = Modifier.fillMaxWidth(0.9f).testTag("datePicker"),
      shape = OutlinedTextFieldDefaults.shape) {
        Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text = SimpleDateFormat("dd-MM-yyyy", Locale.getDefault()).format(selectedDate.time),
              textAlign = TextAlign.Start,
              color = MaterialTheme.colorScheme.primary)
...
                hour,
                minute,
                true // Use 24-hour format
                )
            .show()
      },
      modifier = Modifier.fillMaxWidth(0.9f).testTag("timePicker"),
      shape = OutlinedTextFieldDefaults.shape) {
        Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text =
                  hourToString(
                      selectedDate.get(Calendar.HOUR_OF_DAY), selectedDate.get(Calendar.MINUTE)),
...
                { _: TimePicker, hourOfDay: Int, minute: Int -> selectTime(hourOfDay, minute) },
                lengthHour,
                lengthMin,
                true)
            .show()
      },
      modifier = Modifier.fillMaxWidth(0.9f).testTag("lengthPicker"),
      shape = OutlinedTextFieldDefaults.shape) {
        Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.SpaceBetween) {
          Text(
              text = hourToString(lengthHour, lengthMin),
              textAlign = TextAlign.Start,
              color = MaterialTheme.colorScheme.primary)
...
