...

@Composable
fun SaveIcon(onClick: () -> Unit, isEnabled: () -> Boolean) {
  Icon(
      imageVector = Icons.Default.Save,
      contentDescription = "Delete",
      modifier = Modifier.clickable(enabled = isEnabled()) { onClick() }.testTag("saveIcon"),
      tint = if (isEnabled()) MaterialTheme.colors.primary else Color.Gray)
}

