...
            actions = {
              IconButton(
                  onClick = {
                    timeTableViewModel.deleteScheduled(event)
                    navigationActions.goBack()
                  },
                  modifier = Modifier.testTag("deleteButton")) {
                    Icon(imageVector = Icons.Default.Delete, contentDescription = "delete")
                  }
            })
      },
      bottomBar = {
        BottomNavigationMenu({ navigationActions.navigateTo(it) }, LIST_TOP_LEVEL_DESTINATION, "")
...
                      })

                  // Description of the event
                  Title("Description")
                  OutlinedTextField(
                      value = description,
                      modifier = Modifier.fillMaxWidth(0.9f).testTag("descTextField"),
                      onValueChange = { description = it },
                      placeholder = { Text("No description provided") },
                      suffix = {
                        SaveIcon(
                            onClick = {
                              timeTableViewModel.updateScheduled(
...
